Fix firefox mobile on iphone 6 size problems

--- a/style.css
+++ b/style.css
@@ -362,6 +362,12 @@ section#hireForm > form > button:active {
   }
 }
 
+@media ( max-width: 550px ) and ( max-height: 570px ) {
+  section#hireForm > form {
+    grid-template-rows: repeat( 5, 1fr ) 2.5fr 1fr;
+  }
+}
+
 /* Animations */
 @keyframes arrow-shake {
   from {
